--- a/packages/jsii-config/tsconfig.json
+++ b/packages/jsii-config/tsconfig.json
@@ -3,10 +3,8 @@
   "include": [
     "**/*.ts"
   ],
-  "exclude": [
-    "test/negatives/*"
-  ],
+  "exclude": ["jest.config.ts"],
   "references": [
-    { "path": "../@jsii/spec" }
-  ]
+    { "path": "../@jsii/spec" },
+  ],
 }
