--- a/packages/jsii-pacmak/tsconfig.json
+++ b/packages/jsii-pacmak/tsconfig.json
@@ -3,10 +3,11 @@
   "include": [
     "**/*.ts"
   ],
+  "exclude": ["jest.config.ts"],
   "references": [
     { "path": "../@jsii/spec" },
     { "path": "../codemaker" },
     { "path": "../jsii-rosetta" },
-    { "path": "../jsii-reflect" }
-  ]
+    { "path": "../jsii-reflect" },
+  ],
 }
