--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:update": "lerna run test:update --concurrency=1 --stream"
   },
   "devDependencies": {
+    "@jest/types": "^26.6.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.4.1",
     "all-contributors-cli": "^6.19.0",
@@ -24,9 +25,13 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest-config": "^26.6.0",
+    "jest-expect-message": "^1.0.2",
     "lerna": "^3.22.1",
     "prettier": "^2.1.2",
     "standard-version": "^9.0.0",
+    "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "repository": {
