--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -30,7 +30,8 @@
     "watch": "tsc --build -w",
     "lint": "eslint . --ext .js,.ts --ignore-path=.gitignore",
     "lint:fix": "yarn lint --fix",
-    "test": "jest && npm run test:build",
+    "test": "npm run test:unit && npm run test:build",
+    "test:unit": "jest",
     "test:build": "bash test/build-test.sh",
     "test:update": "jest -u && npm run test:build",
     "package": "package-js"
@@ -63,6 +64,7 @@
     "@types/yargs": "^15.0.8",
     "eslint": "^7.11.0",
     "jest": "^26.6.0",
+    "jest-circus": "^26.6.0",
     "jsii-build-tools": "^0.0.0",
     "jsii-calc": "^0.0.0",
     "mock-fs": "^4.13.0",
@@ -73,24 +75,5 @@
   "keywords": [
     "jsii",
     "aws"
-  ],
-  "jest": {
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "**/bin/**/*.js",
-      "**/lib/**/*.js"
-    ],
-    "coverageReporters": [
-      "lcov",
-      "text"
-    ],
-    "errorOnDeprecated": true,
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/?(*.)+(spec|test).ts"
-    ],
-    "transform": {
-      "\\.tsx?$": "ts-jest"
-    }
-  }
+  ]
 }
