--- a/packages/jsii-reflect/tsconfig.json
+++ b/packages/jsii-reflect/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "../../tsconfig-base",
   "include": ["**/*.ts"],
+  "exclude": ["jest.config.ts"],
   "references": [
     { "path": "../jsii" },
     { "path": "../@jsii/spec" },
-    { "path": "../oo-ascii-tree" }
+    { "path": "../oo-ascii-tree" },
   ]
 }
