--- a/eslint-config.yaml
+++ b/eslint-config.yaml
@@ -33,6 +33,9 @@ settings:
     typescript:
       directory: ./**/tsconfig.json
 
+ignorePatterns:
+  # Ignore Jest configuration file (it's excluded from tsconfig.json, so it's problematic!)
+  - jest.config.ts
 
 rules:
   # Custom Configurations
