--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -5,12 +5,15 @@ on:
   pull_request:
     branches:
       - master
+      - main
     paths:
       - "!**"                         # <-- Excludes everything by default
       - "**/package.json"             # <-- Allows modfying any package.json
       - "**/*.csproj"                 # <-- Allows modifying any .csproj file
       - "**/Directory.Build.targets"  # <-- Allows modifying any Directory.Build.targets file
       - "yarn.lock"                   # <-- Allows modifying yarn.lock
+    types:
+      - opened
 
 jobs:
   approve:
