chore(tests): migrate jest config to jest.config.ts (#2154)
This enables customizing behavior when `CI=true`, which is
conventionally the case on continuous integration systems, where
parallelization can be detrimental to performance due to use of budget
compute platforms.

Additionally, switched `jest` runner to `jest-circus` (which will
eventually become the default `jest` runner), as it promises to be
somewhat faster (at least, it did not degrade performance as far as I
could tell).

The `jest.config.ts` file is naturally excluded from all `npm` packages,
as it is a `.ts` file. It has also been excluded from TypeScript
compiler inputs (via `exclude` in `tsconfig.json` files) as it does not
need to be compiled with the projects (which would additionally cause
spurious `jest.config.d.ts` and `jest.config.js` files to be created).



---

By submitting this pull request, I confirm that my contribution is made under the terms of the [Apache 2.0 license].

[Apache 2.0 license]: https://www.apache.org/licenses/LICENSE-2.0

--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -30,7 +30,8 @@
     "watch": "tsc --build -w",
     "lint": "eslint . --ext .js,.ts --ignore-path=.gitignore",
     "lint:fix": "yarn lint --fix",
-    "test": "jest && npm run test:build",
+    "test": "npm run test:unit && npm run test:build",
+    "test:unit": "jest",
     "test:build": "bash test/build-test.sh",
     "test:update": "jest -u && npm run test:build",
     "package": "package-js"
@@ -73,24 +74,5 @@
   "keywords": [
     "jsii",
     "aws"
-  ],
-  "jest": {
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "**/bin/**/*.js",
-      "**/lib/**/*.js"
-    ],
-    "coverageReporters": [
-      "lcov",
-      "text"
-    ],
-    "errorOnDeprecated": true,
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/?(*.)+(spec|test).ts"
-    ],
-    "transform": {
-      "\\.tsx?$": "ts-jest"
-    }
-  }
+  ]
 }
