--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -29,7 +29,7 @@ jobs:
             # Fetch the base and head refs from origin so we can safely diff 'em
             git fetch --depth=1 --quiet origin ${{ github.base_ref }}
             # Otherwise, only run if the Dockerfile changed
-            changed=$(git diff --name-only origin/${{ github.base_ref }}..HEAD
+            changed=$(git diff --name-only origin/${{ github.base_ref }}..HEAD)
             if grep Dockerfile <<< "${changed}" ; then
               echo '⏯ Dockerfile changed'
               echo "::set-output name=result::true"
