--- a/.mergify/config.yml
+++ b/.mergify/config.yml
@@ -56,7 +56,7 @@ pull_request_rules:
         approved: true
         changes_requested: false
       merge:
-        strict: smart
+        strict: smart+fasttrack
         method: squash
         strict_method: merge
         commit_message: title+body
@@ -104,7 +104,7 @@ pull_request_rules:
         approved: true
         changes_requested: false
       merge:
-        strict: smart
+        strict: smart+fasttrack
         method: merge
         strict_method: merge
         commit_message: title+body
