--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -275,7 +275,7 @@ jobs:
       - name: 'Windows: Put GitBash ahead of $PATH'
         if: runner.os == 'Windows'
         run: |-
-          echo "C:\Program Files\Git\usr\bin" >> $GITHUB_PATH
+          echo "C:\Program Files\Git\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - name: Extract Artifact
         run: |-
           echo "::group::Untar Archive"
