--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -84,11 +84,11 @@ jobs:
 
       # Only when puhsing to main/release from now on
       - name: Publish (nightly)
-        if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref != 'ref/heads/release'
+        if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref != 'refs/heads/release'
         run: |-
           docker push jsii/superchain:nightly
       - name: Publish (latest)
-        if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref == 'ref/heads/release'
+        if: steps.should-run.outputs.result == 'true' && github.event_name == 'push' && github.ref == 'refs/heads/release'
         run: |-
           docker tag jsii/superchain:nightly jsii/superchain:latest
           docker push jsii/superchain:latest
