--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,6 @@
 *.tar.gz binary
 
 # Github Linguist configuration (https://github.com/github/linguist)
-yarn.lock linguidt-generated
+yarn.lock linguist-generated
 *.snap    linguist-generated
 docs/**   linguist-documentation
