chore: enable additional eslint rules
Enabled the following rules as they typically catch programming errors
that are susceptible to be the causes of difficult to diagnose bugs or
performance issues:

- `@typescript-eslint/no-misused-promises` helps ensure not-`await`ed
  promises are not used in conditions, etc... as those are typically not
  the intention of the developer and constitutes a bug that is difficult
  to identify when just reading the code (i.e: likely missed in code
  reviews).
- `@typescript-eslint/prefer-nullish-coalescing` requires consistent use
  of the `??` operator instead of `||` for nullish-coalescing, as this
  operator is safer in this context (`||` is falsey-coalescing, which
  has a broader reach).
- `@typescript-eslint/return-await` ensures consistency in how promises
  are returned from `async` functions, in particular making sure `await`
  is present when a promise is returned from a *try-catch-finally*
  block, as failure to `await` in this context is usually a bug.
- `@typescript-eslint/switch-exhaustiveness-check` requires all `switch`
  are exhaustive, making sure no value is silently ignored, which often
  is the source of silent bugs that are difficult to root cause.

--- a/eslint-config.yaml
+++ b/eslint-config.yaml
@@ -81,6 +81,9 @@ rules:
   '@typescript-eslint/no-for-in-array':
     - error
 
+  '@typescript-eslint/no-misused-promises':
+    - error
+
   '@typescript-eslint/no-require-imports':
     - error
 
@@ -110,6 +113,10 @@ rules:
   '@typescript-eslint/prefer-for-of':
     - error
 
+  '@typescript-eslint/prefer-nullish-coalescing':
+    - error
+    - ignoreMixedLogicalExpressions: true
+
   '@typescript-eslint/prefer-readonly':
     - error
 
@@ -125,6 +132,13 @@ rules:
       allowNullish: true
 
   '@typescript-eslint/require-await':
+    - error
+
+  '@typescript-eslint/return-await':
+    - error
+    - 'in-try-catch'
+
+  '@typescript-eslint/switch-exhaustiveness-check':
     - error
 
   'complexity':
