feat(jsii): configure diagnostics in package.json
Diagnostic codes and categories already exist in JSII. This change adds
configurability via package.json.

--- a/packages/@scope/jsii-calc-base-of-base/package.json
+++ b/packages/@scope/jsii-calc-base-of-base/package.json
@@ -58,6 +58,9 @@
         "module": "scope.jsii_calc_base_of_base"
       }
     },
-    "versionFormat": "short"
+    "versionFormat": "short",
+    "diagnostics": {
+      "a": "b"
+    }
   }
 }
