revert calc-base-of-base

--- a/packages/@scope/jsii-calc-base-of-base/package.json
+++ b/packages/@scope/jsii-calc-base-of-base/package.json
@@ -58,9 +58,6 @@
         "module": "scope.jsii_calc_base_of_base"
       }
     },
-    "versionFormat": "short",
-    "diagnostics": {
-      "a": "b"
-    }
+    "versionFormat": "short"
   }
 }
