--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -217,6 +217,7 @@ jobs:
             python: '3.6'
           # Test alternate .NETs
           - java: '8'
+            # Current release info can be found at https://dotnet.microsoft.com/download/dotnet/5.0
             dotnet: '5.0.100-rc.2.20479.15' # Pre-release matching requires exact version for now
             node: '10'
             os: ubuntu-latest
