--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,6 +239,11 @@ jobs:
             java: '8'
             node: '10'
             os: ubuntu-latest
+          - python: '3.9'
+            dotnet: '3.1.x'
+            java: '8'
+            node: '10'
+            os: ubuntu-latest
 
     runs-on: ${{ matrix.os }}
 
