feat(rosetta): support "strict" assemblies
A "strict" assembly carries a special metadata entry
(`jsii.rosetta.strict = true`) that instructs `jsii-rosetta` to always
handle that as if `--compile` and `--fail` were provided. This allows
opting specific modules from a mono-repository into "enforced compiling"
operation while retaining the ability to run `jsii-rosetta` only once
from the root of the repository.

--- a/packages/@scope/jsii-calc-base-of-base/package.json
+++ b/packages/@scope/jsii-calc-base-of-base/package.json
@@ -58,6 +58,13 @@
         "module": "scope.jsii_calc_base_of_base"
       }
     },
-    "versionFormat": "short"
+    "versionFormat": "short",
+    "metadata": {
+      "jsii": {
+        "rosetta": {
+          "strict": true
+        }
+      }
+    }
   }
 }
