--- a/packages/@scope/jsii-calc-base/package.json
+++ b/packages/@scope/jsii-calc-base/package.json
@@ -46,6 +46,9 @@
       "jsii": {
         "pacmak": {
           "hasDefaultInterfaces": false
+        },
+        "rosetta": {
+          "strict": true
         }
       }
     },
