--- a/packages/@scope/jsii-calc-lib/package.json
+++ b/packages/@scope/jsii-calc-lib/package.json
@@ -72,6 +72,13 @@
     "tsc": {
       "outDir": "build"
     },
-    "versionFormat": "short"
+    "versionFormat": "short",
+    "metadata": {
+      "jsii": {
+        "rosetta": {
+          "strict": true
+        }
+      }
+    }
   }
 }
