fix(go): runtime tests
Update runtime to properly handle Get/StaticGet calls from generated
code. Updates jsii-calc-test to be runnable using `go test`.

--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -11,7 +11,7 @@
     "generate": "npm run gen:rt && npm run gen:calc",
     "build": "npm run generate && go build ./jsii-experimental",
     "test": "go test ./jsii-experimental && npm run test:calc",
-    "test:calc": "npm run gen:calc && go run ./jsii-calc-test"
+    "test:calc": "npm run gen:calc && go test ./jsii-calc-test"
   },
   "keywords": [],
   "author": "",
