chore: fix go runtime build

--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -9,8 +9,8 @@
     "gen:calc": "ts-node build-tools/gen-calc.ts",
     "gen:rt": "ts-node build-tools/gen.ts",
     "generate": "npm run gen:rt && npm run gen:calc",
-    "build": "npm run generate && go build ./jsii-experimental",
-    "test": "go test ./jsii-experimental && npm run test:calc",
+    "build": "npm run generate && (cd ./jsii-experimental && go build)",
+    "test": "(cd ./jsii-experimental && go test) && npm run test:calc",
     "test:calc": "npm run gen:calc && go test ./jsii-calc-test"
   },
   "keywords": [],
