--- a/packages/jsii-calc/package.json
+++ b/packages/jsii-calc/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/aws/jsii/issues"
   },
+  "bin": {
+    "calc": "bin/run"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/aws/jsii.git",
