--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -67,7 +67,7 @@ jobs:
           git config user.email "aws-cdk+automation@amazon.com"
       - name: Prepare Commit
         run: |-
-          rsync --delete --exclude=.git ${{ runner.temp }}/site/ ./
+          rsync --delete --exclude=.git --recursive ${{ runner.temp }}/site/ ./
           touch .nojekyll
           git commit -am 'docs: publish from ${{ github.sha }}'
       - name: Push
