chore: make dependabot look at gh-pages directory

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 
 updates:
   - package-ecosystem: npm
-    directory: "/"
+    directory: '/'
     schedule:
       interval: daily
     open-pull-requests-limit: 10
@@ -12,13 +12,13 @@ updates:
     ignore:
       - dependency-name: typescript
         versions:
-          - ">= 3.10.a"
-      - dependency-name: "@types/node"
+          - '>= 3.10.a'
+      - dependency-name: '@types/node'
         versions:
-          - ">= 11.a"
+          - '>= 11.a'
 
   - package-ecosystem: nuget
-    directory: "/packages/@jsii/dotnet-runtime/src"
+    directory: '/packages/@jsii/dotnet-runtime/src'
     schedule:
       interval: daily
     open-pull-requests-limit: 10
@@ -27,7 +27,7 @@ updates:
       - language/dotnet
 
   - package-ecosystem: nuget
-    directory: "/packages/@jsii/dotnet-runtime-test/test"
+    directory: '/packages/@jsii/dotnet-runtime-test/test'
     schedule:
       interval: daily
     open-pull-requests-limit: 10
@@ -36,15 +36,24 @@ updates:
       - language/dotnet
 
   - package-ecosystem: pip
-    directory: "/packages/@jsii/python-runtime"
+    directory: '/packages/@jsii/python-runtime'
     schedule:
       interval: daily
     open-pull-requests-limit: 10
     labels:
       - dependencies
       - language/python
-    
+
+  - package-ecosystem: pip
+    directory: '/gh-pages'
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    labels:
+      - dependencies
+      - language/python
+
   - package-ecosystem: github-actions
-    directory: "/"
+    directory: '/'
     schedule:
       interval: daily
