--- a/packages/@jsii/runtime/package.json
+++ b/packages/@jsii/runtime/package.json
@@ -29,7 +29,7 @@
     "watch": "tsc --build -w",
     "lint": "eslint . --ext .js,.ts --ignore-path=.gitignore --ignore-pattern=webpack.config.js",
     "lint:fix": "yarn lint --fix",
-    "test": "node --experimental-worker ./node_modules/.bin/jest",
+    "test": "node ./test/run-jest.js",
     "test:update": "yarn test -u",
     "package": "package-js"
   },
