--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -37,6 +37,7 @@
     "package": "package-js"
   },
   "dependencies": {
+    "@jsii/config": "^0.0.0",
     "@jsii/spec": "^0.0.0",
     "clone": "^2.1.2",
     "codemaker": "^0.0.0",
