--- a/packages/@jsii/runtime/package.json
+++ b/packages/@jsii/runtime/package.json
@@ -29,8 +29,9 @@
     "watch": "tsc --build -w",
     "lint": "eslint . --ext .js,.ts --ignore-path=.gitignore --ignore-pattern=webpack.config.js",
     "lint:fix": "yarn lint --fix",
-    "test": "node ./test/run-jest.js",
-    "test:update": "yarn test -u",
+    "jest": "node --experimental-worker $(node -p 'require.resolve(\"jest-cli/bin/jest\")')",
+    "test": "yarn --silent jest",
+    "test:update": "yarn --silent test -u",
     "package": "package-js"
   },
   "dependencies": {
